--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-pdf": "^5.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
